@@ -179,6 +179,7 @@ getEntropy = function(x, type = c('weiner', 'shannon')[1], normalize = FALSE) {
 #' @param low,high exclusive lower and upper bounds ((vectors of length 1 or n))
 #' @param roundToInteger boolean vector of length 1 or n. If TRUE, the
 #'   corresponding value is rounded to the nearest integer.
+#' @inheritParams soundgen
 #' @return A vector of length n.
 #' @keywords internal
 #' @examples
@@ -186,24 +187,23 @@ getEntropy = function(x, type = c('weiner', 'shannon')[1], normalize = FALSE) {
 #'   roundToInteger = c(TRUE, FALSE, FALSE))
 #' soundgen:::rnorm_bounded(n = 9, mean = c(10, 50, 100), sd = c(5, 0, 20),
 #'   roundToInteger = TRUE) # vectorized
+#' # in case of conflicts between mean and bounds, either adjust the mean:
+#' soundgen:::rnorm_bounded(n = 3, mean = 10, sd = .1,
+#'   low = c(15, 0, 0), high = c(100, 100, 8), invalidArgAction = 'adjust')
+#' #... or ignore the boundaries
+#' soundgen:::rnorm_bounded(n = 3, mean = 10, sd = .1,
+#'   low = c(15, 0, 0), high = c(100, 100, 8), invalidArgAction = 'ignore')
 rnorm_bounded = function(n = 1,
                          mean = 0,
                          sd = 1,
                          low = NULL,
                          high = NULL,
-                         roundToInteger = FALSE) {
+                         roundToInteger = FALSE,
+                         invalidArgAction = c('adjust', 'abort', 'ignore')[1]) {
   if (length(mean) < n) mean = spline(mean, n = n)$y
   if (length(sd) < n) sd = spline(sd, n = n)$y
+  if (any(!is.finite(sd))) sd = mean / 10
   sd[sd < 0] = 0
-
-  if (any(mean > high | mean < low)) {
-    warning(paste('Some of the specified means are outside the low/high bounds!',
-            'Mean =', paste(mean, collapse = ', '),
-            'Low =', paste(low, collapse = ', '),
-            'High = ', paste(high, collapse = ', ')))
-    mean[mean < low] = low
-    mean[mean > high] = high
-  }
 
   if (sum(sd != 0) == 0) {
     out = mean
@@ -221,6 +221,23 @@ rnorm_bounded = function(n = 1,
   if (is.null(high)) high = rep(Inf, n)
   if (length(low) == 1) low = rep(low, n)
   if (length(high) == 1) high = rep(high, n)
+
+
+  if (any(mean > high | mean < low)) {
+    warning(paste('Some of the specified means are outside the low/high bounds!',
+                  'Mean =', paste(mean, collapse = ', '),
+                  'Low =', paste(low, collapse = ', '),
+                  'High = ', paste(high, collapse = ', ')))
+    if (invalidArgAction == 'abort') {
+      stop('Aborting rnorm_bounded()')
+    } else if (invalidArgAction == 'adjust') {
+      mean[mean < low] = low[mean < low]
+      mean[mean > high] = high[mean > high]
+    } else if (invalidArgAction == 'ignore') {
+      low = rep(-Inf, n)
+      high = rep(Inf, n)
+    }
+  }
 
   out = rnorm(n, mean, sd)
   out[roundToInteger] = round (out[roundToInteger], 0)
@@ -500,7 +517,7 @@ matchColumns = function (matrix_short, nCol, padWith = 0) {
 #' v3 = rep(100, 15)
 #' addVectors(v1, v3, insertionPoint = -4)
 #' addVectors(v2, v3, insertionPoint = 7)
-addVectors = function(v1, v2, insertionPoint) {
+addVectors = function(v1, v2, insertionPoint = 1) {
   if (!is.numeric(v1)) stop(paste('Non-numeric v1:', head(v1)))
   if (!is.numeric(v2)) stop(paste('Non-numeric v2:', head(v2)))
   v1[is.na(v1)] = 0
